新增厨师与消费者demo